--- a/tos.html
+++ b/tos.html
@@ -59,13 +59,7 @@
                     Talking Discord Ben may revise these Terms of Use for its bot at any time without notice. By using
                     this bot, you agree to the current version of these Terms of Use.
                     <br><br><b>8. Your Privacy</b><br><br>
-                    We collect information such as:
-                    <span class="list">
-                        <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Command Usage
-                        <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Guild Identifiers
-                        <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Guild name
-                        <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Member information
-                    </span>
+                    Read <a href="gdpr.html" style="color: #03a8ea;">Privacy policy</a>
                     <br><br>We can delete data related to your guild at your request. Please go to our <a href="https://discord.gg/UQaAP8PrxS" style="color: #03a8ea;">Discord server</a>
                     <br><br><b>9. Regulatory Laws.</b><br><br>
                     Any claim relating to Talking Discord Ben is governed by the laws of the State of the United States
@@ -80,6 +74,7 @@
                 <li>Bot:</li>
                 <li><br></li>
                 <li><a href="https://discord.gg/UQaAP8PrxS">Invite to server</a></li>
+                <li><a href="gdpr.html">Privacy policy</a></li>
                 <li><a href="index.html">Main page</a></li>
             </ul>
             <ul>
