--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     IM DRUNK
                     <br><b>ben experiment</b>:
                     Mix the test tubes and get a chemical reaction!
-                    <br><b>ben help</b>:
+                    <br><b>ben help [admin]</b>:
                     Show information about commands
                     <br><b>ben say &lt;text&gt;</b>:
                     Let Ben say what you want!
@@ -68,6 +68,7 @@
                     Kick the member
                     <br><b>ben prefix &lt;prefix&gt;</b>:
                     Change the prefix!
+                    <br><b>And also administrative commands!</b> ben help admin
                 </p>
             </div>
         </div>
@@ -98,8 +99,9 @@
             <ul>
                 <li>Bot:</li>
                 <li><br></li>
-                <li><a href="https://discord.gg/UQaAP8PrxS">Invite to server</a></li>
+                <li><a href="https://discord.gg/pmvJ6C6fbY">Invite to server</a></li>
                 <li><a href="tos.html">Terms of Use</a></li>
+                <li><a href="gdpr.html">Piracy Policy</a></li>
             </ul>
             <ul>
                 <li>Socials:</li>
