--- a/gdpr.html
+++ b/gdpr.html
@@ -59,6 +59,7 @@
                         <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Guild name
                         <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Member information
                     </span>
+                    <br><br>We can delete data related to your guild at your request. Please go to our <a href="https://discord.gg/dsben" style="color: #03a8ea;">Discord server</a>
                     <br><br><b>Privacy Policies</b><br><br>
                     You can refer to this list to find the privacy policy of each advertising partner 1.
                     <br>Third-party ad servers or ad networks use technologies such as cookies, JavaScript or Web Beacons
@@ -90,7 +91,7 @@
             <ul>
                 <li>Bot:</li>
                 <li><br></li>
-                <li><a href="https://discord.gg/UQaAP8PrxS">Invite to server</a></li>
+                <li><a href="https://discord.gg/dsben">Invite to server</a></li>
                 <li><a href="tos.html">Terms of Use</a></li>
                 <li><a href="index.html">Main page</a></li>
             </ul>
