--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <ul>
                 <li>Bot:</li>
                 <li><br></li>
-                <li><a href="https://discord.gg/pmvJ6C6fbY">Invite to server</a></li>
+                <li><a href="https://discord.gg/dsben">Invite to server</a></li>
                 <li><a href="tos.html">Terms of Use</a></li>
                 <li><a href="gdpr.html">Piracy Policy</a></li>
             </ul>
