--- a/tos.html
+++ b/tos.html
@@ -60,7 +60,6 @@
                     this bot, you agree to the current version of these Terms of Use.
                     <br><br><b>8. Your Privacy</b><br><br>
                     Read <a href="gdpr.html" style="color: #03a8ea;">Privacy policy</a>
-                    <br><br>We can delete data related to your guild at your request. Please go to our <a href="https://discord.gg/UQaAP8PrxS" style="color: #03a8ea;">Discord server</a>
                     <br><br><b>9. Regulatory Laws.</b><br><br>
                     Any claim relating to Talking Discord Ben is governed by the laws of the State of the United States
                     without regard to its conflict of laws rules.
@@ -73,7 +72,7 @@
             <ul>
                 <li>Bot:</li>
                 <li><br></li>
-                <li><a href="https://discord.gg/UQaAP8PrxS">Invite to server</a></li>
+                <li><a href="https://discord.gg/dsben">Invite to server</a></li>
                 <li><a href="gdpr.html">Privacy policy</a></li>
                 <li><a href="index.html">Main page</a></li>
             </ul>
