update gdpr and tos

--- a/gdpr.html
+++ b/gdpr.html
@@ -20,7 +20,7 @@
                     policy document describes the types of information Talking Discord Ben collects and records and how
                     we use it.
                     <br><br>If you have additional questions or need more information about our privacy policy, feel free to
-                    contact us.
+                    <a href="https://discord.gg/dsben" style="color: #03a8ea;">contact us</a>.
                     <br><br>General Data Protection Regulation (GDPR)
                     We are the Data Controller of your information.
                     <br><br>Talking Discord Ben's legal basis for collecting and using the Personal Information described in
@@ -51,7 +51,8 @@
                     browser type, Internet Service Provider (ISP), date and time stamps, referral/exit pages, and
                     possibly the number of clicks. This data is not linked to any personal information. The purpose of
                     this information is to analyze trends, administer the site, track users' movements around the site,
-                    and gather demographic information.
+                    and gather demographic information. As for the bot, we never share information with third parties,
+                    all data is stored on the provider hosting the bot.
                     <br><br>We collect information such as:
                     <span class="list">
                         <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Command Usage
@@ -61,9 +62,9 @@
                     </span>
                     <br><br>We can delete data related to your guild at your request. Please go to our <a href="https://discord.gg/dsben" style="color: #03a8ea;">Discord server</a>
                     <br><br><b>Privacy Policies</b><br><br>
-                    You can refer to this list to find the privacy policy of each advertising partner 1.
+                    You can refer to this list to find the privacy policy of each advertising partner Talking Discord Ben.
                     <br>Third-party ad servers or ad networks use technologies such as cookies, JavaScript or Web Beacons
-                    that are used in their respective advertisements and links that appear on 1 that are sent directly
+                    that are used in their respective advertisements and links that appear on Talking Discord Ben that are sent directly
                     to the user's browser. In doing so, they automatically obtain your IP address. These technologies
                     are used to measure the effectiveness of their advertising campaigns and/or to personalize the
                     advertising content you see on the sites you visit.
