--- a/tos.html
+++ b/tos.html
@@ -23,14 +23,8 @@
                     protected by copyright and trademark laws. Also, the images, sounds from My Talking Ben are owned by
                     Outfit7 Limited.
                     <br><br><b>2. license to use.</b><br><br>
-                    Permission is granted to temporarily download one copy of the materials from the bot for personal,
-                    non-commercial transitory viewing only. This is a grant of license, not a transfer of ownership, and
-                    under this license you may not:
-                    <br>modify or copy the materials;
-                    <br>use the materials for any commercial purposes or public display;
-                    <br>attempt to reverse engineer any software contained in the bot;
-                    <br>remove any copyright or other proprietary notices from the materials; or
-                    <br>transfer the materials to another person or "mirror" the materials on any other server.
+                    Some of the images, sounds are owned by Outfit7 Limited.
+                    They may control the license for use.
                     <br>Talking Discord Ben will terminate if you violate any of these restrictions. Upon termination,
                     your right to view will also terminate and you must destroy any downloaded materials in your
                     possession, whether in hard copy or electronic format. These Terms Of Service were created using the
