added invite and fix commands

--- a/gdpr.html
+++ b/gdpr.html
@@ -92,13 +92,15 @@
             <ul>
                 <li>Bot:</li>
                 <li><br></li>
-                <li><a href="https://discord.gg/dsben">Invite to server</a></li>
+                <li><a href="https://discord.com/api/oauth2/authorize?client_id=943475427937251379&permissions=3525696&scope=bot">Invite to server</a></li>
+                <li><a href="https://discord.gg/dsben">Support server</a></li>
                 <li><a href="tos.html">Terms of Use</a></li>
-                <li><a href="index.html">Main page</a></li>
+                <li><a href="gdpr.html">Piracy Policy</a></li>
             </ul>
             <ul>
                 <li>Socials:</li>
                 <li><br></li>
+                <li><a href="https://boosty.to/ardub">Support me!</a></li>
                 <li><a href="https://github.com/Ardub92">Github</a></li>
                 <li><a href="https://www.tiktok.com/@ardub92">Tik-Tok</a></li>
             </ul>
