--- a/index.html
+++ b/index.html
@@ -12,10 +12,24 @@
 <body>
     <main>
         <div class="discord-message">
-            <div class="avatar ben-avatar"></div>
+            <a
+                href="https://discord.com/api/oauth2/authorize?client_id=943475427937251379&permissions=3525696&scope=bot">
+                <div class="avatar ben-avatar"></div>
+            </a>
             <div class="text-content">
                 <h1 class="title">Talking Discord Ben</h1>
-                <p class="text">Hello. My name is ben! I'm a talking Ben on Discord! You can call me, do the experiment, or tell me what you will write!</p>
+                <p class="text">Hello. My name is Ben! I'm a Talking Ben on Discord! You can call me, do the experiment or tell me what you will write!
+                I can also join the voice chat!</p>
+            </div>
+        </div>
+        <div class="discord-message">
+            <a
+                href="https://discord.com/api/oauth2/authorize?client_id=943475427937251379&permissions=3525696&scope=bot">
+                <div class="avatar ben-avatar"></div>
+            </a>
+            <div class="text-content">
+                <h1 class="title">Talking Discord Ben</h1>
+                <p class="text">If you want to add me, click on me!</p>
             </div>
         </div>
         <div class="discord-message">
@@ -26,12 +40,15 @@
             </div>
         </div>
         <div class="discord-message">
-            <div class="avatar ben-avatar"></div>
+            <a
+                href="https://discord.com/api/oauth2/authorize?client_id=943475427937251379&permissions=3525696&scope=bot">
+                <div class="avatar ben-avatar"></div>
+            </a>
             <div class="text-content">
-                <h1 class="title">Talking Discord Ben</h1>
-                <p class="text"><i>Ring</i><br>
+            <h1 class="title">Talking Discord Ben</h1>
+            <p class="text"><i>Ring</i><br>
                 Ben...</p>
-            </div>
+        </div>
         </div>
         <div class="discord-message">
             <div class="avatar user-avatar"></div>
@@ -41,34 +58,32 @@
             </div>
         </div>
         <div class="discord-message">
-            <div class="avatar ben-avatar"></div>
+            <a
+                href="https://discord.com/api/oauth2/authorize?client_id=943475427937251379&permissions=3525696&scope=bot">
+                <div class="avatar ben-avatar"></div>
+            </a>
             <div class="text-content">
                 <h1 class="title">Talking Discord Ben</h1>
                 <p class="text">ohoho</p>
             </div>
         </div>
         <div class="discord-message">
-            <div class="avatar ben-avatar"></div>
+            <a
+                href="https://discord.com/api/oauth2/authorize?client_id=943475427937251379&permissions=3525696&scope=bot">
+                <div class="avatar ben-avatar"></div>
+            </a>
             <div class="text-content">
                 <h1 class="title">Talking Discord Ben</h1>
                 <p class="text"><b>All Commands:</b><br>
-                    <br><b>ben beans</b>:
-                    I REALLY WANT BEANS
-                    <br><b>ben call [end]</b>:
-                    You can call Ben, who will answer
-                    <br><b>ben cider</b>:
-                    IM DRUNK
-                    <br><b>ben experiment</b>:
-                    Mix the test tubes and get a chemical reaction!
-                    <br><b>ben help [admin]</b>:
-                    Show information about commands
-                    <br><b>ben say &lt;text&gt;</b>:
-                    Let Ben say what you want!
-                    <br><b>ben kick &lt;member&gt; &lt;reason&gt;</b>:
-                    Kick the member
-                    <br><b>ben prefix &lt;prefix&gt;</b>:
-                    Change the prefix!
-                    <br><b>And also administrative commands!</b> ben help admin
+                    <b>ben eat</b>: I REALLY WANT BEANS<br>
+                    <b>ben burp</b>: After a hearty lunch<br>
+                    <b>ben call [end]</b>: You can call Ben, who will answer<br>
+                    <b>ben drink</b>: IM DRUNK<br>
+                    <b>ben dog</b>: I send you a random dog!<br>
+                    <b>ben experiment</b>: Mix the test tubes and get a chemical reaction!<br>
+                    <b>ben help [admin]</b>: Show information about commands<br>
+                    <b>ben news image or text</b>: NEWS FROM BEN!<br>
+                    <b>ben say text</b>   : Let Ben say what you want!<br>
                 </p>
             </div>
         </div>
@@ -80,7 +95,10 @@
             </div>
         </div>
         <div class="discord-message">
-            <div class="avatar ben-avatar"></div>
+            <a
+                href="https://discord.com/api/oauth2/authorize?client_id=943475427937251379&permissions=3525696&scope=bot">
+                <div class="avatar ben-avatar"></div>
+            </a>
             <div class="text-content">
                 <h1 class="title">Talking Discord Ben</h1>
                 <p class="text">shut up</p>
@@ -99,13 +117,17 @@
             <ul>
                 <li>Bot:</li>
                 <li><br></li>
-                <li><a href="https://discord.gg/dsben">Invite to server</a></li>
+                <li><a
+                        href="https://discord.com/api/oauth2/authorize?client_id=943475427937251379&permissions=3525696&scope=bot">Invite
+                        to server</a></li>
+                <li><a href="https://discord.gg/dsben">Support server</a></li>
                 <li><a href="tos.html">Terms of Use</a></li>
                 <li><a href="gdpr.html">Piracy Policy</a></li>
             </ul>
             <ul>
                 <li>Socials:</li>
                 <li><br></li>
+                <li><a href="https://boosty.to/ardub">Support me!</a></li>
                 <li><a href="https://github.com/Ardub92">Github</a></li>
                 <li><a href="https://www.tiktok.com/@ardub92">Tik-Tok</a></li>
             </ul>
