--- a/index.html
+++ b/index.html
@@ -44,10 +44,55 @@
         </div>
         <img class="medium-image mediumtop" src="./images/ben.png" alt="">
     </div>
-    <div class="servers dfont center white medium-padding font-size-title">
+    <div class="servers medfont center white medium-padding font-size-title">
         <div class="row center">
             <p class="smallright">It was added to over 5000 servers, including the IShowSpeed server!</p>
             <img src="./images/speed.png" class="small-image">
+        </div>
+    </div>
+    <div class="medfont white center medium-padding font-size-avgnormal">
+        <p>Main features:</p>
+    </div>
+    <div class="command small-margin medfont white center center-evenly gray-bg round medium-box-padding">
+        <img src="./images/commands/call.gif" class="round medium-image">
+        <div class="center column w-40">
+            <div class="flex">
+                <h1 class="font-size-title smallright">You can talk with dog!</h1>
+                <img src="./images/commands/phone.png" style="width: 6vmin;">
+            </div>
+            <p class="font-size-normal small-top">Tell him everything that comes into your head. He will listen to you!</p>
+            <a href="https://discord.com/api/oauth2/authorize?client_id=943475427937251379&permissions=3525696&scope=bot"
+                class="white">
+                <div class="button smallright">
+                    <span class="font-size-button center">Let's talk!</span>
+                </div>
+            </a>
+        </div>
+    </div>
+    <div class="command small-margin medfont white center center-evenly medium-box-padding">
+        <div class="center column">
+            <div class="flex">
+                <h1 class="font-size-title smallright">Do an experiment!</h1>
+                <img src="./images/commands/tube.png" style="width: 6vmin;">
+            </div>
+            <p class="font-size-normal small-top">Mix potions and get amazing reactions!</p>
+        </div>
+        <img src="./images/commands/experiment.gif" class="round medium-image">
+    </div>
+    <div class="command small-margin medfont white center center-evenly gray-bg round medium-box-padding">
+        <img src="./images/commands/news.gif" class="round medium-image">
+        <div class="center column">
+            <div class="flex">
+                <h1 class="font-size-title smallright">Go live!</h1>
+                <img src="./images/commands/news.png" style="width: 6vmin;">
+            </div>
+            <p class="font-size-normal small-top">You're the director of the news channel!</p>
+            <a href="https://discord.com/api/oauth2/authorize?client_id=943475427937251379&permissions=3525696&scope=bot"
+                class="white">
+                <div class="button smallright">
+                    <span class="font-size-button center">Let's talk!</span>
+                </div>
+            </a>
         </div>
     </div>
     <main>
