--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Talking Discord Ben</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" el="stylesheet">
+    <script src="./app.js" defer></script>
 </head>
 
 <body>
@@ -23,7 +24,7 @@
                     <span class="font-size-button center">Invite me</span>
                 </div>
             </a>
-            <a href="https://discord.gg/dsben" class="white">
+            <a href="https://discord.gg/ardub" class="white">
                 <div class="button gray-button">
                     <span class="font-size-button center">Support Server</span>
                 </div>
@@ -184,7 +185,7 @@
                 <li><a
                         href="https://discord.com/api/oauth2/authorize?client_id=943475427937251379&permissions=3525696&scope=bot">Invite
                         to server</a></li>
-                <li><a href="https://discord.gg/dsben">Support server</a></li>
+                <li><a href="https://discord.gg/ardub">Support server</a></li>
                 <li><a href="tos.html">Terms of Use</a></li>
                 <li><a href="gdpr.html">Piracy Policy</a></li>
             </ul>
