--- a/gdpr.html
+++ b/gdpr.html
@@ -20,7 +20,7 @@
                     policy document describes the types of information Talking Discord Ben collects and records and how
                     we use it.
                     <br><br>If you have additional questions or need more information about our privacy policy, feel free to
-                    <a href="https://discord.gg/ardub" style="color: #03a8ea;">contact us</a>.
+                    <a href="https://discord.gg/pmvJ6C6fbY" style="color: #03a8ea;">contact us</a>.
                     <br><br>General Data Protection Regulation (GDPR)
                     We are the Data Controller of your information.
                     <br><br>Talking Discord Ben's legal basis for collecting and using the Personal Information described in
@@ -60,7 +60,7 @@
                         <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Guild name
                         <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Member information
                     </span>
-                    <br><br>We can delete data related to your guild at your request. Please go to our <a href="https://discord.gg/ardub" style="color: #03a8ea;">Discord server</a>
+                    <br><br>We can delete data related to your guild at your request. Please go to our <a href="https://discord.gg/pmvJ6C6fbY" style="color: #03a8ea;">Discord server</a>
                     <br><br><b>Privacy Policies</b><br><br>
                     You can refer to this list to find the privacy policy of each advertising partner Talking Discord Ben.
                     <br>Third-party ad servers or ad networks use technologies such as cookies, JavaScript or Web Beacons
@@ -95,7 +95,7 @@
                 <li><a
                         href="https://discord.com/api/oauth2/authorize?client_id=943475427937251379&permissions=3525696&scope=bot">Invite
                         to server</a></li>
-                <li><a href="https://discord.gg/ardub">Support server</a></li>
+                <li><a href="https://discord.gg/pmvJ6C6fbY">Support server</a></li>
                 <li><a href="tos.html">Terms of Use</a></li>
                 <li><a href="index.html">Main page</a></li>
             </ul>
