--- a/tos.html
+++ b/tos.html
@@ -69,7 +69,7 @@
                 <li><a
                         href="https://discord.com/api/oauth2/authorize?client_id=943475427937251379&permissions=3525696&scope=bot">Invite
                         to server</a></li>
-                <li><a href="https://discord.gg/ardub">Support server</a></li>
+                <li><a href="https://discord.gg/pmvJ6C6fbY">Support server</a></li>
                 <li><a href="gdpr.html">Pyracy Policy</a></li>
                 <li><a href="index.html">Main page</a></li>
             </ul>
